client/src/css/ai-styles.css
/* AI Chat */

.chat-messages {
  flex: 1;
  overflow-y: auto;
  padding: 10px;
  margin-top: 40px;
}

.chat-input {
  display: flex;
  padding: 10px;
}

#userInput {
  flex: 1;
  padding: 5px;
  border: 1px solid var(--js-yellow);
  border-radius: 3px;
  background-color: var(--semi-black);
  color: var(--light-gray);
}

#userInput::placeholder {
  color: var(--light-gray);
}

/* Message Formatting */

.message {
  margin-bottom: 10px;
  padding: 5px 10px;
  border-radius: 3px;
  max-width: 100%;
}

.message p {
  margin: 0 0 10px 0;
}

.message p:last-child {
  margin-bottom: 0;
}

.message pre {
  white-space: pre-wrap;
  word-wrap: break-word;
  background-color: var(--semi-black);
  border: 1px solid #ccc;
  border-radius: 3px;
  padding: 10px;
  margin: 10px 0;
}

.message code {
  background-color: var(--semi-black);
  border-radius: 3px;
  padding: 2px 4px;
  font-family: monospace;
}

.user-message {
  background-color: var(--semi-black);
  color: var(--light-gray);
  align-self: flex-end;
}

.bot-message {
  background-color: var(--semi-black);
  color: var(--light-blue);
  align-self: flex-start;
}

.light-mode .message code,
.light-mode .message pre {
  background-color: var(--white);
}

.message ul,
.message ol {
  margin: 0 0 10px 20px;
  padding: 0;
}

